# Qt-QrDecoder

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  main.cpp
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
